--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ env_logger = "0.10.0"
 futures = "0.3.28"
 log = "0.4.20"
 mongodb = "2.6.1"
+structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
