--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ log = "0.4.20"
 mongodb = "2.6.1"
 structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0.179", features = ["derive"] }
+toml = "0.7.6"
