--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ structopt = "0.3.26"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.179", features = ["derive"] }
 toml = "0.7.6"
+serde_json = "1.0.105"
